fixed spacing issue in mat-chips

--- a/src/app/home/car-brands/car-brands.component.scss
+++ b/src/app/home/car-brands/car-brands.component.scss
@@ -1,5 +1,5 @@
 #car-brands{
-  margin-top: 100px;
+  margin-top: 120px;
 }
 
 .content {
@@ -26,10 +26,3 @@ button{
   color: #d73b1e;
 }
 
-@media screen and (max-width: 913px) {
-
-  #car-brands{
-    margin-top: 150px;
-  }
-
-}
