--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,7 +11,7 @@ header{
 
 #sub-header{
   position: fixed;
-  top: 50px;
+  top: 30px;
   left: 20px;
   z-index: 1;
 }
